--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "nodemailer": "^4.6.8",
+    "nodemon": "^1.18.6",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
