--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.6",
     "rxjs": "^6.0.0",
+    "stripe": "^6.17.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
